--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -60,3 +60,80 @@
   outline: none;
   cursor: pointer;
 }
+
+.gpt3_navbar_menu_icons {
+  color: #fff !important;
+  font-size: 27px !important;
+  padding-left: 5px;
+}
+
+.gpt3_navbar_menu {
+  margin-left: 1rem;
+
+  display: none;
+  position: relative;
+}
+
+.gpt3_navbar_menu svg {
+  cursor: pointer;
+}
+
+.gpt3_navbar_menu_container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-direction: column;
+
+  text-align: end;
+  background: var(--color-footer);
+  padding: 2rem;
+  position: absolute;
+  right: 0;
+  top: 40px;
+  margin-top: 1rem;
+  min-width: 210px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+.gpt3_navbar_menu_container p {
+  margin: 1rem 0;
+}
+
+.gpt3_navbar_menu_container_links_sign {
+  display: none;
+}
+
+@media screen and (max-width: 1050px) {
+  .gpt3_navbar_links_container {
+    display: none;
+  }
+
+  .gpt3_navbar_menu {
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .gpt3_navbar {
+    padding: 2rem 4rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .gpt3_navbar {
+    padding: 2rem;
+  }
+
+  .gpt3_navbar_sign {
+    display: none;
+  }
+
+  .gpt3_navbar_menu_container {
+    top: 20px;
+  }
+
+  .gpt3_navbar_menu_container_links_sign {
+    display: block;
+  }
+}
